<resources>
    <string name="app_name">SoccerAPI</string>
    <string name="BarkNews">Bark News</string>
    <string name="commentmessage">Please tell us what do you think about our app:</string>
    <string name="undo">Undo</string>
    <string name="toastmessage">Click on any news below to view details !</string>
    <string name="snackbar1">You like this app!</string>
    <string name="snackbar2">You do not like this app!</string>
    <string name="newsdate">News Date</string>
    <string name="theweblink">The Web Link</string>
    <string name="newsDescription">News Description</string>
    <string name="commenthint">Your comment...</string>
    <string name="boxrate">Rating</string>
    <string name="yesmessage">Yes</string>
    <string name="nomessage">No</string>
    <string name="ratingMessage">Please take your time to rate our app</string>
    <string name="browserButton">Open the browser</string>
    <string name="SaveButton">Save to my favorite</string>
    <string name="SaveFavButton">Save to favorite</string>
    <string name="SwitchQuestion">Do you like this app?</string>
    <string name="toast_help">Help button clicked</string>
    <string name="helpmessage">You can keep up with the latest soccer news with this app. You can store the news you\'re interested in to your favourites by clicking on it. To check the stored list, click the favourite news icon.</string>
    <string name="NewsTitle">News Title</string>
    <string name="RemovefavButton">Remove from favourite</string>
    <string name="gotoButton">Go to my favorite</string>
    <string name="FavButton">Favorite news</string>
    <string name="FavoriteNews">Favorite News</string>
    <string name="Instructions">Instructions</string>
    <string name="version">Version 1.0</string>
    <string name="author">Jamal Harake</string>
    <string name="soccerNews">Soccer News</string>
    <string name="help">Help</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="soccerPage">You went back to the landing page</string>
    <string name="favPage">You clicked favorite soccer news page</string>
    <string name="NavigationDrawer" translatable="false">NavigationDrawer</string>
    <string name="helpPage">When you click on an icon, you will be sent to an associated page.</string>
    <string name="helpPageMovie">Use this program to search for movies by title. Press save to save it to your own list. Press saved video to view your list! You can delete videos or view extra details of favorite movies</string>


    <string name="search">Search</string>
    <string name="type_title_of_movie_your_searching_for">Type title of movie your searching for</string>
    <string name="searchTitle">You can search for movie titles</string>
    <string name="hintTitleSearch">Type Movie Title here</string>
    <string name="saveButtonText">Save</string>
    <string name="returnButtontext">Return to search</string>
    <string name="your_saved_movies_text">Your saved Movies</string>
    <string name="go_back">Go Back</string>
    <string name="soccer">Soccer</string>
    <string name="movie">Movie</string>
    <string name="help3">Help</string>
    <string name="soccer2">Soccer</string>
    <string name="Home">Home</string>


</resources>